resources/assets/sass/components/_buttons.scss
a {
  &.action {
    font-size: 11px;
    text-transform: uppercase;
    font-weight: 400;
    margin-top: -1px;
    padding: 6px 8px 6px 8px;
    background: $highlight;
    border: 1px solid $highlight;
    color: $background;
    display: inline-block;
    clear: left;
    margin-bottom: 4px;
    &:hover {
      background: $tertiary;
      border-color: $tertiary;
      color: $background;
    }
    &.secondary {
      background: $accent;
      border: 1px solid $accent;
      color: $foreground;
      &:hover {
        background: $tertiary;
        border-color: $tertiary;
        color: $background;
      }
    }
    &.right {
      float: right;
    }
  }
}
button {
  font-size: 11px;
  text-transform: uppercase;
  &[type='submit'] {
    min-width: 0;
    margin-top: 10px;
    padding: 7px 8px;
    display: inline-block;
    background: $highlight;
    color: $background;
    border: none;
    cursor: pointer;
    &:hover {
      background: $tertiary;
    }
  }
}
a {
  &.version-dropdown {
    background: $highlight;
    color: $background;
    position: relative;
    cursor: pointer;
    ul {
      border-top: 1px solid #ffffff;
      position: absolute;
      top: 25px;
      left: 0;
      display: none;
      a {
        display: inline;
      }
    }
    &:hover ul {
      display: block;
      margin-left: -1px;
      li {
        min-width: 100px;
        padding: 8px;
        background: $highlight;
        color: $background;
        &:hover {
          background: $tertiary;
        }
      }
    }
  }
}

